--- a/.github/workflows/rw06_secrets_vars.yml
+++ b/.github/workflows/rw06_secrets_vars.yml
@@ -1,4 +1,4 @@
-name: Using secret and variables
+name: rw06_secrets_vars using secrets and variables in a reusable workflow
 on:
   workflow_call:
     secrets: # reusable workflows do not have direct access to secrets, we have to pass them from the caller
@@ -10,12 +10,10 @@ jobs:
   use_secrets_and_vars:
     runs-on: ubuntu-latest
     steps:
-      - run: echo ${{ secrets.repo_s }}
-      - run: echo ${{ secrets.org_s }}
-   #   - run: echo ${{secrets.org_s=='orgsecret'}} # this is a way to test if the secret value has been passed correctly
-   #   - run: echo ${{secrets.org_s}} | sed 's/./& /g' # prints the secret for test; use only for a dummy secret.
+      - run: ${{secrets.org_s=='orgsecret'}}  | sed 's/./& /g' # prints the secret for test; use only for a dummy secret.
+      - run: echo ${{secrets.org_s}} | sed 's/./& /g' # prints the secret for test; use only for a dummy secret.
       # the variables defined at the repository or organization level will be available in called workflow
       # We do not need to pass these vars from the caller workflow.
       - run: echo ${{vars.repo_var}} # a variable defined at the repository level
       - run: echo ${{vars.org_var}} # a variable defined at the organization level
-      - run: echo test done
+      - run: echo reusable workflow done
