--- a/.github/workflows/rw06_secrets_vars.yml
+++ b/.github/workflows/rw06_secrets_vars.yml
@@ -10,10 +10,10 @@ jobs:
   use_secrets_and_vars:
     runs-on: ubuntu-latest
     steps:
-      - run: ${{secrets.org_s=='orgsecret'}}  | sed 's/./& /g' # prints the secret for test; use only for a dummy secret.
-      - run: echo ${{secrets.org_s}} | sed 's/./& /g' # prints the secret for test; use only for a dummy secret.
-      # the variables defined at the repository or organization level will be available in called workflow
-      # We do not need to pass these vars from the caller workflow.
-      - run: echo ${{vars.repo_var}} # a variable defined at the repository level
-      - run: echo ${{vars.org_var}} # a variable defined at the organization level
-      - run: echo reusable workflow done
+    # the sed 's/./& /g' is used to unmask asecret, use it only for dummy secrets
+      - run: |
+          ${{secrets.org_s=='orgsecret'}}  | sed 's/./& /g'
+          echo ${{secrets.org_s}} | sed 's/./& /g' 
+          echo ${{vars.repo_var}} # a variable defined at the repository level
+          echo ${{vars.org_var}} # a variable defined at the organization level
+          echo reusable workflow done
