--- a/.github/workflows/rw07_scripts.yml
+++ b/.github/workflows/rw07_scripts.yml
@@ -20,7 +20,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           sparse-checkout: |
-            ${{inputs.bash_script}}
+            source ${{inputs.bash_script}}
       # cone mode false means will checkout only the file/files mentioned in the path
       # default is true which checks out repository root level files unnecessarily for our case
           sparse-checkout-cone-mode: false 
