--- a/.github/workflows/rw07_scripts.yml
+++ b/.github/workflows/rw07_scripts.yml
@@ -20,11 +20,11 @@ jobs:
         uses: actions/checkout@v4
         with:
           sparse-checkout: |
-            source ${{inputs.bash_script}}
+            ${{inputs.bash_script}}
       # cone mode false means will checkout only the file/files mentioned in the path
       # default is true which checks out repository root level files unnecessarily for our case
           sparse-checkout-cone-mode: false 
       - name: run scripts
         run: |
-          ${{ github.workspace }}/${{inputs.bash_script}}
+          source ${{ github.workspace }}/${{inputs.bash_script}}
           echo reusable workflow done
