--- a/.github/workflows/rw07_scripts.yml
+++ b/.github/workflows/rw07_scripts.yml
@@ -21,10 +21,19 @@ jobs:
         with:
           sparse-checkout: |
             ${{inputs.bash_script}}
+            ${{inputs.py_script}}
+            ${{inputs.js_script}}
       # cone mode false means will checkout only the file/files mentioned in the path
       # default is true which checks out repository root level files unnecessarily for our case
           sparse-checkout-cone-mode: false 
       - name: run scripts
         run: |
-          source ${{ github.workspace }}/${{inputs.bash_script}}
-          echo reusable workflow done
+          chmod +x ${{ github.workspace }}/${{inputs.bash_script}}
+          ${{ github.workspace }}/${{inputs.bash_script}}
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.x'
+      - name: Install dependencies and run script
+        run: python ${{ github.workspace }}/${{inputs.py_script}}
+        
