--- a/.github/workflows/rw07_scripts.yml
+++ b/.github/workflows/rw07_scripts.yml
@@ -26,7 +26,7 @@ jobs:
       # cone mode false means will checkout only the file/files mentioned in the path
       # default is true which checks out repository root level files unnecessarily for our case
           sparse-checkout-cone-mode: false 
-      - name: run scripts
+      - name: run a bash script
         run: |
           chmod +x ${{ github.workspace }}/${{inputs.bash_script}}
           ${{ github.workspace }}/${{inputs.bash_script}}
@@ -34,6 +34,14 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.x'
-      - name: Install dependencies and run script
+      - name: run a python script
         run: python ${{ github.workspace }}/${{inputs.py_script}}
+      - name: run a js script
+        uses: actions/github-script@v7
+        with:
+      # comment the following to get json output result
+      # result-encoding: string
+          script: |
+            ${{ github.workspace }}/${{inputs.js_script}}()
+            
         
