--- a/.github/workflows/rw07_scripts.yml
+++ b/.github/workflows/rw07_scripts.yml
@@ -41,7 +41,6 @@ jobs:
         with:
       # comment the following to get json output result
       # result-encoding: string
-          script: |
-            ${{ github.workspace }}/${{inputs.js_script}}()
+          script: ${{ github.workspace }}/${{inputs.js_script}}()
             
         
