--- a/.github/workflows/rw07_scripts.yml
+++ b/.github/workflows/rw07_scripts.yml
@@ -13,7 +13,7 @@ on:
         type: string  
 jobs:
   job1:
-    name: run scripts
+    name: run caller repo scripts
     runs-on: ubuntu-latest
     steps:
       - name: checkout file
@@ -39,16 +39,15 @@ jobs:
       - name: run a js script
         uses: actions/github-script@v7
         with:
-      # comment the following to get json output result
-      # result-encoding: string
           script: |
             try {
-              const exec = require('${{ github.workspace }}/${{inputs.js_script}}')
+              const exec = require('${{ github.repository }}/${{inputs.js_script}}')
               exec()          
               return "success"
             } catch(err) {
               core.error("Error json data")
               core.setFailed(err)
             }
+            
             
         
