--- a/.github/composite-actions/a07_scripts/action.yml
+++ b/.github/composite-actions/a07_scripts/action.yml
@@ -20,23 +20,23 @@ runs:
       # The third command (chmod ...) is required to run the fourth command which runs the  script in a new shell and any environmental changes made inside the 
       # script are not propagated to the current shell.
       run: |
-        source ${{github.action_path}}/../../${{inputs.bash_script}}
-        . ${{github.action_path}}/../../${{inputs.bash_script}}
-        chmod +x ${{github.action_path}}/../../${{inputs.bash_script}}
-        ${{github.action_path}}/../../${{inputs.bash_script}}
+        source ${{github.action_path}}/../../../${{inputs.bash_script}}
+        . ${{github.action_path}}/../../../${{inputs.bash_script}}
+        chmod +x ${{github.action_path}}/../../../${{inputs.bash_script}}
+        ${{github.action_path}}/../../../${{inputs.bash_script}}
     - name: Set up Python 
       uses: actions/setup-python@v5
       with:
         python-version: '3.x'
     - name: run a python script
       shell: bash
-      run: python ${{github.action_path}}/../../${{inputs.py_script}}
+      run: python ${{github.action_path}}/../../../${{inputs.py_script}}
     - name: run a js script
       uses: actions/github-script@v7
       with:
         script: |
           try {
-            const exec = require('${{github.action_path}}/../../${{inputs.js_script}}')
+            const exec = require('${{github.action_path}}/../../../${{inputs.js_script}}')
             exec()          
             return "success"
           } catch(err) {
