--- a/.github/composite-actions/a08_read_json_data/action.yml
+++ b/.github/composite-actions/a08_read_json_data/action.yml
@@ -1,11 +1,11 @@
-name: demo read json
+name: a08_read_json_data demo 
 description: Demo showing how to read a json file attached to caller workflow repo using two methods
 # 1. directly in shell using jq
 # 2. in javascript using another action
-# example caller workflow .github/workflows/read_json_file.yml
+
 inputs:
   file_path:
-    required: true  # if 'required' is 'false', set a default value using default: somevalue
+    required: true 
     type: string
 outputs:
   data:
@@ -19,15 +19,7 @@ runs:
       with:
         sparse-checkout: |
           ${{inputs.file_path}}
-      # cone mode false means will checkout only the file/files mentioned in the path
-      # default is true which checks out repository root level files unnecessarily for our case
-        sparse-checkout-cone-mode: false 
-    - name: see what files were checked out
-      shell: bash
-      run: |
-        ls -al $GITHUB_WORKSPACE
-        ls -al $GITHUB_WORKSPACE/.github
-        ls -al $GITHUB_WORKSPACE/.github/test-files   
+        sparse-checkout-cone-mode: false  
     - name: read json directly in shell
       shell: bash
       run: |
@@ -39,7 +31,7 @@ runs:
       uses: actions/github-script@v7
       id: read_json
       with:
-      # comment the followingto get json output result
+      # comment the following to get json output result
       # result-encoding: string
         script: |
           try {
