--- a/.github/composite-actions/a08_read_yaml_data/action.yml
+++ b/.github/composite-actions/a08_read_yaml_data/action.yml
@@ -1,7 +1,7 @@
 name: a08_read_yaml_data demo
-description: Demo showing how to read a yaml file attached to root-caller-workflow repo using two methods
+description: Demo showing how to read a yaml file located in the caller workflow repo using two methods
 # 1. directly in shell using yq
-# 2. using javascript actions/github-script
+# 2. using javascript action: actions/github-script
 
 inputs:
   file_path:
@@ -32,8 +32,6 @@ runs:
       uses: actions/github-script@v7
       id: read_file
       with:
-      # comment the followingto get json output result
-      # result-encoding: string
         script: |
           try {
             const yml = require('js-yaml')
